<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <ImageView
        android:id="@+id/iv2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/parchment" />

    <TextView
        android:id="@+id/tv_group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/h_padding"
        android:layout_marginTop="32dp"
        android:text="@string/group_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/medium_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_group" />

    <EditText
        android:id="@+id/et_group_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/h_padding"
        android:layout_marginEnd="@dimen/h_padding"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/group_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:nextFocusDown="@id/et_num_players"
        android:textColor="@android:color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/small_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_group_name" />

    <TextView
        android:id="@+id/tv_num_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/h_padding"
        android:layout_marginTop="32dp"
        android:text="@string/max_num_players"
        android:textColor="@android:color/black"
        android:textSize="@dimen/medium_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_group_name" />

    <EditText
        android:id="@+id/et_num_players"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/h_padding"
        android:layout_marginEnd="@dimen/h_padding"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/five"
        android:importantForAutofill="no"
        android:inputType="number"
        android:nextFocusDown="@id/btn_create_group"
        android:textColor="@android:color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/small_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num_players" />

    <Button
        android:id="@+id/btn_create_group"
        android:background="@drawable/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group"
        android:fontFamily="@font/blackcastlemf"
        android:textSize="@dimen/scroll_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_player_name"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tv_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/h_padding"
        android:layout_marginTop="32dp"
        android:text="@string/player_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/medium_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_num_players" />

    <EditText
        android:id="@+id/et_player_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/h_padding"
        android:layout_marginEnd="@dimen/h_padding"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/player_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/small_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_player_name" />

    <TextView
        android:id="@+id/tv_create_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/v_padding"
        android:fontFamily="@font/greatvibes"
        android:text="@string/create_your_group"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>